--- a/serverless-chatbot/serverless.yml
+++ b/serverless-chatbot/serverless.yml
@@ -31,12 +31,22 @@ provider:
   iamRoleStatements:
     - Effect: "Allow"
       Action:
+          - rekognition:DetectFaces
+      Resource: '*'
+    - Effect: "Allow"
+      Action:
         - "s3:GetObject"
         - "s3:PutObject"
       Resource: arn:aws:s3:::${self:custom.uploadBucket}/*
+    - Effect: "Allow"
+      Action:
+        - "s3:GetObject"
+        - "s3:PutObject"
+      Resource: arn:aws:s3:::${self:custom.transformBucket}/*
 
 custom:
   uploadBucket: ${self:service}-${self:provider.stage}-uploads
+  transformBucket: ${self:service}-${self:provider.stage}-transformed-dk
 
 #    - Effect: "Allow"
 #      Action:
@@ -75,12 +85,25 @@ functions:
       TEMP_FOLDER: '/tmp/'
   faceswap:
     handler: faceswap.execute
+    environment:
+      TEMP_FOLDER: '/tmp/'
+      OUTPUT_PREFIX: 'output-'
+      UPLOAD_BUCKET: ${self:custom.uploadBucket}
+      TRANSFORM_BUCKET: ${self:custom.transformBucket}
     events:
       - s3:
           bucket: ${self:custom.uploadBucket}
           event: s3:ObjectCreated:*
   bot:
     handler: bot.endpoint
+  slackupdate:
+    handler: slackupdate.execute
+    events:
+      - s3:
+          bucket: ${self:custom.transformBucket}
+          event: s3:ObjectCreated:*
+
+
 
 #    The following are a few example events you can configure
 #    NOTE: Please make sure to change your handler code to work with those events
