the bot now posts the converted image back to the channel

--- a/serverless-chatbot/serverless.yml
+++ b/serverless-chatbot/serverless.yml
@@ -98,6 +98,10 @@ functions:
     handler: bot.endpoint
   slackupdate:
     handler: slackupdate.execute
+    environment:
+      POST_MESSAGE_URL: 'https://slack.com/api/chat.postMessage?'
+      BOT_ACCESS_TOKEN: 'xoxb-165976169429-AIZAPJWiWpdcM1uZ143YlDhq'
+      CHANNEL_ID: 'C4USNQZDG'
     events:
       - s3:
           bucket: ${self:custom.transformBucket}
