it's now able to return a shortened URL which points to the converted image

--- a/serverless-chatbot/package.json
+++ b/serverless-chatbot/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "gm": "^1.23.0"
+    "gm": "^1.23.0",
+    "request": "^2.81.0"
   }
 }
